# Sniffleads

./: .gitignore  README.md
backend/: manage.py  medium_test.html  pyproject.toml
backend/apps/api/: urls_v1.py
backend/apps/common/: enums.py  models.py
backend/apps/crawler/: base.py  http_client.py  pipelines.py  rate_limit.py  tasks.py
backend/apps/leads/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/leads/migrations/: 0001_initial.py
backend/apps/scrapers/: __init__.py  apps.py  medium.py  reddit.py  registry.py
backend/apps/sources/: models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/sources/migrations/: 0001_initial.py
backend/sniffleads/: __init__.py  celery.py  urls.py  wsgi.py
backend/sniffleads/settings/: base.py  local.py  production.py
backend/tests/: test_leads.py
docs/: architecture.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: page.tsx  provider.tsx
frontend/src/app/dashboard/jobs/: page.tsx
frontend/src/components/leads/: leads-table.tsx
frontend/src/lib/: utils.ts
infra/compose/: docker-compose.dev.yaml
infra/containers/: Containerfile.web  Containerfile.worker
infra/terraform/: ecs-services.tf  main.tf  variables.tf
scripts/: aws-destroy.sh
